[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/input_name.gd" type="Script" id=1]
[ext_resource path="res://interface/setting_group.tres" type="ButtonGroup" id=2]
[ext_resource path="res://interface/Setting.gd" type="Script" id=3]
[ext_resource path="res://interface/setting_options.gd" type="Script" id=4]

[node name="HBoxContainer" type="HBoxContainer"]
margin_right = 490.0
margin_bottom = 24.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
text = "  Name"

[node name="name" type="LineEdit" parent="."]
margin_left = 50.0
margin_right = 174.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="AspectRatioContainer" parent="."]
margin_left = 178.0
margin_right = 302.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PanelContainer2" type="AspectRatioContainer" parent="."]
margin_left = 306.0
margin_right = 430.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Setting" type="Button" parent="."]
margin_left = 434.0
margin_right = 490.0
margin_bottom = 24.0
text = "setting"
align = 0
script = ExtResource( 3 )

[node name="PopupDialog" type="PopupDialog" parent="Setting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -93.0
margin_right = 236.0
margin_bottom = 93.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Setting/PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -79.0
margin_right = 219.0
margin_bottom = 67.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Setting/PopupDialog/VBoxContainer"]
margin_right = 438.0
margin_bottom = 116.0
script = ExtResource( 4 )

[node name="Title" type="Label" parent="Setting/PopupDialog/VBoxContainer/VBoxContainer"]
margin_right = 438.0
margin_bottom = 14.0
text = "Setting"
align = 1

[node name="TileSource" type="Label" parent="Setting/PopupDialog/VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 438.0
margin_bottom = 32.0
text = "Source"

[node name="Default" type="CheckBox" parent="Setting/PopupDialog/VBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 438.0
margin_bottom = 60.0
pressed = true
group = ExtResource( 2 )
text = "PATH"

[node name="Virtual" type="CheckBox" parent="Setting/PopupDialog/VBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 438.0
margin_bottom = 88.0
group = ExtResource( 2 )
text = "Virtual Environments"

[node name="HBoxContainer" type="HBoxContainer" parent="Setting/PopupDialog/VBoxContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 438.0
margin_bottom = 116.0

[node name="TitlePath" type="Label" parent="Setting/PopupDialog/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
text = "       Path"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Setting/PopupDialog/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 410.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Setting/PopupDialog/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 414.0
margin_right = 438.0
margin_bottom = 24.0
text = "..."

[node name="FileDialog" type="FileDialog" parent="Setting/PopupDialog/VBoxContainer/VBoxContainer/HBoxContainer/Button"]
visible = true
margin_right = 358.0
margin_bottom = 286.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/Godot/py to exe"
current_path = "/Godot/py to exe/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Setting/PopupDialog/VBoxContainer"]
margin_top = 136.0
margin_right = 438.0
margin_bottom = 156.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Setting/PopupDialog/VBoxContainer/HBoxContainer2"]
margin_right = 404.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Ok" type="Button" parent="Setting/PopupDialog/VBoxContainer/HBoxContainer2"]
margin_left = 408.0
margin_right = 438.0
margin_bottom = 20.0
text = "Ok"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="Setting/PopupDialog"]
margin_left = 442.091
margin_top = 10.3181
margin_right = 462.091
margin_bottom = 30.3181
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Setting" to="Setting" method="_on_Setting_pressed"]
[connection signal="venv_change" from="Setting" to="." method="_on_Setting_venv_change"]
[connection signal="about_to_show" from="Setting/PopupDialog" to="Setting" method="_on_PopupDialog_about_to_show"]
[connection signal="pressed" from="Setting/PopupDialog/VBoxContainer/VBoxContainer/Default" to="Setting/PopupDialog/VBoxContainer/VBoxContainer" method="_on_Default_pressed"]
[connection signal="pressed" from="Setting/PopupDialog/VBoxContainer/VBoxContainer/Virtual" to="Setting/PopupDialog/VBoxContainer/VBoxContainer" method="_on_Virtual_pressed"]
[connection signal="pressed" from="Setting/PopupDialog/VBoxContainer/VBoxContainer/HBoxContainer/Button" to="Setting/PopupDialog/VBoxContainer/VBoxContainer" method="_on_Button_pressed"]
[connection signal="dir_selected" from="Setting/PopupDialog/VBoxContainer/VBoxContainer/HBoxContainer/Button/FileDialog" to="Setting/PopupDialog/VBoxContainer/VBoxContainer" method="_on_FileDialog_dir_selected"]
[connection signal="pressed" from="Setting/PopupDialog/VBoxContainer/HBoxContainer2/Ok" to="Setting" method="_on_Ok_pressed"]
[connection signal="pressed" from="Setting/PopupDialog/Close" to="Setting" method="_on_Close_pressed"]
